; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_dec.c_ASN1_item_d2i.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_dec.c_ASN1_item_d2i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ASN1_item_d2i(i32** %0, i8** %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32** %0, i32*** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* null, i32** %11, align 8
  %12 = load i32**, i32*** %6, align 8
  %13 = icmp eq i32** %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32** %11, i32*** %6, align 8
  br label %15

15:                                               ; preds = %14, %4
  %16 = call i32 @asn1_tlc_clear_nc(i32* %10)
  %17 = load i32**, i32*** %6, align 8
  %18 = load i8**, i8*** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i64 @ASN1_item_ex_d2i(i32** %17, i8** %18, i64 %19, i32* %20, i32 -1, i32 0, i32 0, i32* %10)
  %22 = icmp sgt i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %15
  %24 = load i32**, i32*** %6, align 8
  %25 = load i32*, i32** %24, align 8
  store i32* %25, i32** %5, align 8
  br label %27

26:                                               ; preds = %15
  store i32* null, i32** %5, align 8
  br label %27

27:                                               ; preds = %26, %23
  %28 = load i32*, i32** %5, align 8
  ret i32* %28
}

declare dso_local i32 @asn1_tlc_clear_nc(i32*) #1

declare dso_local i64 @ASN1_item_ex_d2i(i32**, i8**, i64, i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
